--- a/session2/session2.ipynb
+++ b/session2/session2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,9 +134,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(FieldElement_223(49),FieldElement_223(71))\n",
+      "Point(FieldElement_223(64),FieldElement_223(168))\n",
+      "Point(FieldElement_223(36),FieldElement_223(111))\n",
+      "Point(FieldElement_223(194),FieldElement_223(51))\n",
+      "Point(FieldElement_223(116),FieldElement_223(55))\n",
+      "Point(infinity)\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 3.1\n",
     "\n",
@@ -156,7 +169,15 @@
     "    # start product at 0 (point at infinity)\n",
     "    # loop over n times (n is 2, 4, 8 or 21 in the above examples)\n",
     "        # add the point to the product\n",
-    "    # print product"
+    "    # print product\n",
+    "for n, xr, yr in multiplications:\n",
+    "    x = FieldElement(xr, prime)\n",
+    "    y = FieldElement(yr, prime)\n",
+    "    p = Point(x, y, a, b)\n",
+    "    product = Point(None, None, a, b)\n",
+    "    for _ in range(n):\n",
+    "        product += p\n",
+    "    print(product)"
    ]
   },
   {
@@ -181,9 +202,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 4.1\n",
     "\n",
@@ -199,18 +228,36 @@
     "inf = Point(None, None, a, b)\n",
     "\n",
     "# start product at point\n",
+    "product = p\n",
     "# start counter at 1\n",
+    "count = 1\n",
     "# loop until you get point at infinity (0)\n",
+    "while product != inf:\n",
     "    # add the point to the product\n",
+    "    product = product + p\n",
     "    # increment counter\n",
-    "# print counter"
+    "    count += 1\n",
+    "# print counter\n",
+    "print(count)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.002s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 4.2/4.3\n",
     "\n",
@@ -220,9 +267,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Confirgming G is on the curve\n",
     "p = 2**256 - 2**32 - 977\n",
@@ -233,9 +291,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(infinity)\n"
+     ]
+    }
+   ],
    "source": [
     "# Confirming order of G is n\n",
     "from ecc import G\n",
@@ -246,9 +312,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(9680241112d370b56da22eb535745d9e314380e568229e09f7241066003bc471,ddac2d377f03c201ffa0419d6596d10327d6c70313bb492ff495f946285d8f38)\n"
+     ]
+    }
+   ],
    "source": [
     "# Getting the public point from a secret\n",
     "from ecc import G\n",
@@ -277,9 +351,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(5cbdf0646e5db4eaa398f365f2ea7a0e3d419b7e0330e39ce92bddedcac4f9bc,6aebca40ba255960a3178d6d861a54dba813d0b813fde7b5a5082628087264da)\n",
+      "Point(c982196a7466fbbbb0e27a940b6af926c1a74d5ad07128c82824a11b5398afda,7a91f9eae64438afb9ce6448a1c133db2d8fb9254e4546b6f001637d50901f55)\n",
+      "Point(8f68b9d2f63b5f339239c1ad981f162ee88c5678723ea3351b7b444c9ec4c0da,662a9f2dba063986de1d90c2b6be215dbbea2cfe95510bfdf23cbf79501fff82)\n",
+      "Point(9577ff57c8234558f293df502ca4f09cbc65a6572c842b39b366f21717945116,10b49c67fa9365ad7b90dab070be339a1daf9052373ec30ffae4f72d5e66d053)\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 5.1\n",
     "\n",
@@ -288,14 +373,28 @@
     "secrets = (7, 1485, 2**128, 2**240+2**31)\n",
     "\n",
     "# iterate over secrets\n",
-    "    # get the public point"
+    "for secret in secrets:\n",
+    "    # get the public point\n",
+    "    print(secret * G)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.248s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 5.2\n",
     "\n",
@@ -322,9 +421,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'049d5ca49670cbe4c3bfa84c96a8c87df086c6ea6a24ba6b809c9de234496808d56fa15cc7f3d38cda98dee2419f415b7513dde1301f8643cd9245aea7f3f911f9'\n",
+      "b'039d5ca49670cbe4c3bfa84c96a8c87df086c6ea6a24ba6b809c9de234496808d5'\n",
+      "b'04a598a8030da6d86c6bc7f2f5144ea549d28211ea58faa70ebf4c1e665c1fe9b5204b5d6f84822c307e4b4a7140737aec23fc63b65b35f86a10026dbd2d864e6b'\n",
+      "b'03a598a8030da6d86c6bc7f2f5144ea549d28211ea58faa70ebf4c1e665c1fe9b5'\n",
+      "b'04aee2e7d843f7430097859e2bc603abcc3274ff8169c1a469fee0f20614066f8e21ec53f40efac47ac1c5211b2123527e0e9b57ede790c4da1e72c91fb7da54a3'\n",
+      "b'03aee2e7d843f7430097859e2bc603abcc3274ff8169c1a469fee0f20614066f8e'\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 6.1\n",
     "from binascii import hexlify\n",
@@ -334,17 +446,37 @@
     "secrets = (999**3, 123, 42424242)\n",
     "\n",
     "# iterate through secrets\n",
+    "for secret in secrets:\n",
     "    # get public point\n",
+    "    point = secret*G\n",
     "    # uncompressed - b'\\x04' followed by x coord, then y coord\n",
+    "    print(hexlify(b'\\x04' + point.x.num.to_bytes(32, 'big') + point.y.num.to_bytes(32, 'big')))\n",
     "    # here's how you express a coordinate in bytes: some_integer.to_bytes(32, 'big')\n",
+    "    if point.y.num % 2 == 1:\n",
+    "        prefix = b'\\x03'\n",
+    "    else:\n",
+    "        prefix = b'\\x02'\n",
+    "    print(hexlify(prefix + point.x.num.to_bytes(32, 'big')))\n",
     "    # compressed - b'\\x02'/b'\\x03' follewed by x coord. 02 if y is even, 03 otherwise"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.188s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 6.2\n",
     "\n",
@@ -373,9 +505,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'148dY81A9BmdpMhvYEVznrM45kWN32vSCN'\n",
+      "b'mieaqB68xDCtbUBYFoUNcmZNwk74xcBfTP'\n",
+      "b'1S6g2xBJSED7Qr9CYZib5f4PYVhHZiVfj'\n",
+      "b'mfx3y63A7TfTtXKkv7Y6QzsPFY6QCBCXiP'\n",
+      "b'1226JSptcStqn4Yq9aAmNXdwdc2ixuH9nb'\n",
+      "b'mgY3bVusRUL6ZB2Ss999CSrGVbdRwVpM8s'\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 7.1\n",
     "from ecc import G\n",
@@ -390,20 +535,40 @@
     ")\n",
     "\n",
     "# iterate through components\n",
+    "for compressed, secret in components:\n",
     "    # get the public point\n",
+    "    point = secret*G\n",
     "    # get the sec format\n",
+    "    sec = point.sec(compressed)\n",
     "    # hash160 the result\n",
+    "    h160 = hash160(sec)\n",
     "    # prepend b'\\x00' for mainnet b'\\x6f' for testnet\n",
+    "    for prefix in (b'\\x00', b'\\x6f'):\n",
     "        # get the double_sha256 of the prefix + h160, first 4 bytes are the checksum\n",
+    "        raw = prefix + h160\n",
     "        # append checksum\n",
-    "        # encode_base58 the whole thing"
+    "        raw = raw + double_sha256(raw)[:4]\n",
+    "        # encode_base58 the whole thing\n",
+    "        print(encode_base58(raw))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.186s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 7.2\n",
     "\n",
@@ -505,9 +670,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 9.1\n",
     "\n",
@@ -528,17 +702,39 @@
     "\n",
     "# initialize the public point\n",
     "# use: S256Point(x-coordinate, y-coordinate)\n",
+    "point = S256Point(px, py)\n",
     "\n",
     "# iterate over signatures\n",
+    "for z, r, s in signatures:\n",
     "    # u = z / s, v = r / s\n",
-    "    # finally, uG+vP should have the x-coordinate equal to r"
+    "    # finally, uG+vP should have the x-coordinate equal to r\n",
+    "    u = z * pow(s, N-2, N) % N\n",
+    "    v = r * pow(s, N-2, N) % N\n",
+    "    print((u*G + v*point).x.num == r)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.357s\n",
+      "\n",
+      "OK\n",
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.358s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 9.2\n",
     "\n",
@@ -546,6 +742,13 @@
     "run_test(ecc.S256Test('test_verify'))\n",
     "run_test(ecc.PrivateKeyTest('test_sign'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -564,7 +767,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
