changed names to sig_hash and hash_type

--- a/session4/session4.ipynb
+++ b/session4/session4.ipynb
@@ -264,7 +264,7 @@
     "# Exercise 6.1\n",
     "\n",
     "reload(tx)\n",
-    "run_test(tx.TxTest('test_hash_to_sign'))"
+    "run_test(tx.TxTest('test_sig_hash'))"
    ]
   },
   {
@@ -358,11 +358,11 @@
     "\n",
     "# parse the transaction using Tx.Parse\n",
     "# grab the input at index\n",
-    "# use the input's der_signature method to get the der signature and sighash\n",
+    "# use the input's der_signature method to get the der signature and hash_type\n",
     "# parse the signature using Signature.parse\n",
     "# use the input's sec_pubkey to get the sec pubkey\n",
     "# parse the sec pubkey using S256Point.parse\n",
-    "# use the hash_to_sign method on index and sighash to get z\n",
+    "# use the sig_hash method on index and hash_type to get z\n",
     "# use the pubkey to verify the signature (z, sig)"
    ]
   }
