--- a/session4/complete/session4.ipynb
+++ b/session4/complete/session4.ipynb
@@ -121,7 +121,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.004s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
@@ -143,7 +143,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'transaction': {'outputs': [{'script': 'dup hash160 [a802fc56c704ce87c42d7c92eb75e7896bdc41ae] equalverify checksig', 'address_hash': 'a802fc56c704ce87c42d7c92eb75e7896bdc41ae', 'value': '42505594'}, {'script': 'dup hash160 [e82bd75c9c662c3f5700b33fec8a676b6e9391d5] equalverify checksig', 'address_hash': 'e82bd75c9c662c3f5700b33fec8a676b6e9391d5', 'value': '6181285'}], 'lock_time': '0', 'hash': 'd1c789a9c60383bf715f3f6ad9d14b91fe55f3deb369fe5d9280cb1a01793f81', 'inputs': [{'script': '[304402207e6009ad86367fc4b166bc80bf10cf1e78832a01e9bb491c6d126ee8aa436cb502200e29e6dd7708ed419cd5ba798981c960f0cc811b24e894bff072fea8074a7c4c01] [03bc9e7397f739c70f424aa7dcce9d2e521eb228b0ccba619cd6a0b9691da796a1]', 'address_hash': '08907afd35beea3d5594f2154faef8be78b78a5e', 'previous_output': {'index': '0', 'hash': 'cbf43825e0b92ba3bfabaec509e14ee9132df1e92ffdfc6636f848fbf0537c13'}, 'sequence': '4294967295'}, {'script': '[3045022100f4bfdb0b3185c778cf28acbaf115376352f091ad9e27225e6f3f350b847579c702200d69177773cd2bb993a816a5ae08e77a6270cf46b33f8f79d45b0cd1244d9c4c01] [031c0b0b95b522805ea9d0225b1946ecaeb1727c0b36c7e34165769fd8ed860bf5]', 'address_hash': '5a990a8f1810cce3097957c4d2f521dc69d26400', 'previous_output': {'index': '1', 'hash': '590133d8ac653229dfd8d72d2a81564502051f21554f919ae59ac27be7727451'}, 'sequence': '4294967295'}], 'version': '1'}}\n",
+      "{'transaction': {'inputs': [{'previous_output': {'hash': 'cbf43825e0b92ba3bfabaec509e14ee9132df1e92ffdfc6636f848fbf0537c13', 'index': '0'}, 'address_hash': '08907afd35beea3d5594f2154faef8be78b78a5e', 'sequence': '4294967295', 'script': '[304402207e6009ad86367fc4b166bc80bf10cf1e78832a01e9bb491c6d126ee8aa436cb502200e29e6dd7708ed419cd5ba798981c960f0cc811b24e894bff072fea8074a7c4c01] [03bc9e7397f739c70f424aa7dcce9d2e521eb228b0ccba619cd6a0b9691da796a1]'}, {'previous_output': {'hash': '590133d8ac653229dfd8d72d2a81564502051f21554f919ae59ac27be7727451', 'index': '1'}, 'address_hash': '5a990a8f1810cce3097957c4d2f521dc69d26400', 'sequence': '4294967295', 'script': '[3045022100f4bfdb0b3185c778cf28acbaf115376352f091ad9e27225e6f3f350b847579c702200d69177773cd2bb993a816a5ae08e77a6270cf46b33f8f79d45b0cd1244d9c4c01] [031c0b0b95b522805ea9d0225b1946ecaeb1727c0b36c7e34165769fd8ed860bf5]'}], 'hash': 'd1c789a9c60383bf715f3f6ad9d14b91fe55f3deb369fe5d9280cb1a01793f81', 'outputs': [{'value': '42505594', 'address_hash': 'a802fc56c704ce87c42d7c92eb75e7896bdc41ae', 'script': 'dup hash160 [a802fc56c704ce87c42d7c92eb75e7896bdc41ae] equalverify checksig'}, {'value': '6181285', 'address_hash': 'e82bd75c9c662c3f5700b33fec8a676b6e9391d5', 'script': 'dup hash160 [e82bd75c9c662c3f5700b33fec8a676b6e9391d5] equalverify checksig'}], 'lock_time': '0', 'version': '1'}}\n",
       "b'76a914a802fc56c704ce87c42d7c92eb75e7896bdc41ae88ac'\n"
      ]
     }
@@ -221,12 +221,12 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.329s\n",
+      "Ran 1 test in 0.333s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.670s\n",
+      "Ran 1 test in 0.314s\n",
       "\n",
       "OK\n"
      ]
@@ -315,7 +315,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 1.620s\n",
+      "Ran 1 test in 1.503s\n",
       "\n",
       "OK\n"
      ]
@@ -376,7 +376,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.320s\n",
+      "Ran 1 test in 0.296s\n",
       "\n",
       "OK\n"
      ]
@@ -386,7 +386,7 @@
     "# Exercise 6.1\n",
     "\n",
     "reload(tx)\n",
-    "run_test(tx.TxTest('test_hash_to_sign'))"
+    "run_test(tx.TxTest('test_sig_hash'))"
    ]
   },
   {
@@ -518,16 +518,16 @@
     "t = Tx.parse(stream)\n",
     "# grab the input at index\n",
     "tx_in = t.tx_ins[index]\n",
-    "# use the input's der_signature method to get the der signature and sighash\n",
-    "der, sighash = tx_in.der_signature()\n",
+    "# use the input's der_signature method to get the der signature and hash_type\n",
+    "der, hash_type = tx_in.der_signature()\n",
     "# parse the signature using Signature.parse\n",
     "sig = Signature.parse(der)\n",
     "# use the input's sec_pubkey to get the sec pubkey\n",
     "sec = tx_in.sec_pubkey()\n",
     "# parse the sec pubkey using S256Point.parse\n",
     "point = S256Point.parse(sec)\n",
-    "# use the hash_to_sign method on index and sighash to get z\n",
-    "z = t.hash_to_sign(index, sighash)\n",
+    "# use the sig_hash method on index and hash_type to get z\n",
+    "z = t.sig_hash(index, hash_type)\n",
     "# use the pubkey to verify the signature (z, sig)\n",
     "point.verify(z, sig)"
    ]
