--- a/session5/session5.ipynb
+++ b/session5/session5.ipynb
@@ -57,10 +57,9 @@
     "# Step 1\n",
     "tx_ins = []\n",
     "prev_tx = unhexlify('0025bc3c0fa8b7eb55b9437fdbd016870d18e0df0ace7bc9864efc38414147c8')\n",
-    "prev_index = 0\n",
     "tx_ins.append(TxIn(\n",
     "            prev_tx=prev_tx,\n",
-    "            prev_index=prev_index,\n",
+    "            prev_index=0,\n",
     "            script_sig=b'',\n",
     "            sequence=0xffffffff,\n",
     "        ))\n",
@@ -80,14 +79,15 @@
     "tx_obj = Tx(version=1, tx_ins=tx_ins, tx_outs=tx_outs, locktime=0, testnet=True)\n",
     "\n",
     "# Step 3\n",
-    "sighash = SIGHASH_ALL\n",
-    "z = tx_obj.hash_to_sign(0, sighash)\n",
+    "hash_type = SIGHASH_ALL\n",
+    "z = tx_obj.hash_to_sign(0, hash_type)\n",
     "pk = PrivateKey(secret=8675309)\n",
     "der = pk.sign(z).der()\n",
-    "sig = der + bytes([sighash])\n",
+    "sig = der + bytes([hash_type])\n",
     "sec = pk.point.sec()\n",
-    "script_sig = Script([sig, sec])\n",
-    "tx_obj.tx_ins[0].script_sig = script_sig\n",
+    "script_sig = bytes([len(sig)]) + sig + bytes([len(sec)]) + sec\n",
+    "script_sig = bytes([len(script_sig)]) + script_sig\n",
+    "tx_obj.tx_ins[0].script_sig = Script.parse(script_sig)\n",
     "hexlify(tx_obj.serialize())"
    ]
   },
