--- a/session7.ipynb
+++ b/session7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,30 @@
     "import network\n",
     "import script\n",
     "import tx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.304s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 1.2\n",
+    "\n",
+    "reload(ecc)\n",
+    "run_test(ecc.PrivateKeyTest('test_parse'))"
    ]
   },
   {
