minor solution fix for session1: missing modulo prime for exercise 2.2

--- a/session1/complete/session1.ipynb
+++ b/session1/complete/session1.ipynb
@@ -161,7 +161,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 26, 52, 78, 104, 130, 156, 182, 208, 234, 260, 286, 312, 338, 364, 390, 416, 442, 468, 494, 520, 546, 572, 598, 624, 650, 676, 702, 728, 754, 780]\n"
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]\n"
      ]
     }
    ],
@@ -173,7 +173,7 @@
     "# use range(31) to iterate over all numbers from 0 to 30 inclusive\n",
     "prime = 31\n",
     "k = randint(1,31)\n",
-    "print(sorted([i*k for i in range(31)]))"
+    "print(sorted([i*k % prime for i in range(31)]))"
    ]
   },
   {
