--- a/session6.ipynb
+++ b/session6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,21 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 1.1\n",
     "\n",
@@ -67,21 +55,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 2.1\n",
     "\n",
@@ -108,17 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15hZo812Lx266Dot6T52krxpnhrNiaqHya\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 3.1\n",
     "\n",
@@ -128,32 +96,16 @@
     "hex_script_pubkey = '76a914338c84849423992471bffb1a54a8d9b1d69dc28a88ac'\n",
     "\n",
     "# bytes.fromhex to get binary\n",
-    "script_pubkey = bytes.fromhex(hex_script_pubkey)\n",
     "# parse with Script\n",
-    "s = Script.parse(script_pubkey)\n",
     "# get the 3rd element, which should be the hash160\n",
-    "h160 = s.elements[2]\n",
-    "# convert h160 to p2pkh address\n",
-    "print(h160_to_p2pkh_address(h160))"
+    "# convert h160 to p2pkh address"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 3.2\n",
     "\n",
@@ -182,17 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2375044d646ad73594dd0b37b113becdb03964584c9e7e000000000000000000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 4.1\n",
     "\n",
@@ -201,42 +145,17 @@
     "hex_block = '020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d'\n",
     "\n",
     "# bytes.fromhex to get the binary\n",
-    "bin_block = bytes.fromhex(hex_block)\n",
     "# double_sha256 the result\n",
-    "result = double_sha256(bin_block)\n",
-    "# hex() to see what it looks like\n",
-    "print(result.hex())"
+    "# hex() to see what it looks like"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "OK\n",
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "OK\n",
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 4.2\n",
     "\n",
@@ -248,19 +167,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BIP9: True\n",
-      "BIP91: False\n",
-      "BIP141: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Version Signaling Example\n",
     "\n",
@@ -269,7 +178,6 @@
     "\n",
     "hex_block = '020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d'\n",
     "\n",
-    "# bytes.fromhex to get the binary block\n",
     "bin_block = bytes.fromhex(hex_block)\n",
     "# create a stream using BytesIO\n",
     "stream = BytesIO(bin_block)\n",
@@ -283,6 +191,23 @@
     "print('BIP91: {}'.format(version >> 4 & 1 == 1))\n",
     "# see if bit 1 (version >> 1) from the right is set ( & 1) for BIP141\n",
     "print('BIP141: {}'.format(version >> 1 & 1 == 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n\",\n",
+    "     \"# get the version\\n\",\n",
+    "-    \"version = b.version\\n\",\n",
+    "     \"# rightshift 29 (version >> 29) and see if it's equal to 0b001 for BIP9\\n\",\n",
+    "-    \"print('BIP9: {}'.format(version >> 29 == 0b001))\\n\",\n",
+    "     \"# see if bit 4 (version >> 4) from the right is set ( & 1) for BIP91\\n\",\n",
+    "-    \"print('BIP91: {}'.format(version >> 4 & 1 == 1))\\n\",\n",
+    "-    \"# see if bit 1 (version >> 1) from the right is set ( & 1) for BIP141\\n\",\n",
+    "-    \"print('BIP141: {}'.format(version >> 1 & 1 == 1))"
    ]
   },
   {
@@ -301,31 +226,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "OK\n",
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "OK\n",
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 5.1\n",
     "\n",
@@ -337,17 +240,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0000000000000000013ce9000000000000000000000000000000000000000000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculating Target from Bits Example\n",
     "\n",
@@ -362,17 +257,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "888171856257\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculating Difficulty from Target Example\n",
     "\n",
@@ -411,18 +298,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "00000000000000001788f2000000000000000000000000000000000000000000\n",
-      "46717549644.70642\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 6.1\n",
     "\n",
@@ -431,45 +309,22 @@
     "hex_bits = 'f2881718'\n",
     "\n",
     "# bytes.fromhex to get the bits\n",
-    "bits = bytes.fromhex(hex_bits)\n",
     "# last byte is exponent\n",
-    "exponent = bits[-1]\n",
     "# first three bytes are the coefficient in little endian\n",
-    "coefficient = little_endian_to_int(bits[:-1])\n",
     "# plug into formula coefficient * 2^(8*(exponent-3)) to get the target\n",
-    "target = coefficient * 2**(8*(exponent-3))\n",
     "# print target using print('{:x}'.format(target).zfill(64))\n",
-    "print('{:x}'.format(target).zfill(64))\n",
     "\n",
     "hex_min_bits = 'ffff001d'\n",
     "# do the same for the min_bits for min target\n",
-    "min_bits = bytes.fromhex(hex_min_bits)\n",
-    "min_exponent = min_bits[-1]\n",
-    "min_coefficient = little_endian_to_int(min_bits[:-1])\n",
-    "min_target = min_coefficient * 2**(8*(min_exponent-3))\n",
     "\n",
-    "# difficulty is min target / target\n",
-    "difficulty = min_target / target\n",
-    "print(difficulty)"
+    "# difficulty is min target / target"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 6.2\n",
     "\n",
@@ -496,17 +351,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 7.1\n",
     "\n",
@@ -517,38 +364,19 @@
     "hex_block = '04000000fbedbbf0cfdaf278c094f187f2eb987c86a199da22bbb20400000000000000007b7697b29129648fa08b4bcd13c9d5e60abb973a1efac9c8d573c71c807c56c3d6213557faa80518c3737ec1'\n",
     "\n",
     "# bytes.fromhex to get the binary block\n",
-    "bin_block = bytes.fromhex(hex_block)\n",
     "# double_sha256 the block\n",
-    "sha = double_sha256(bin_block)\n",
     "# interpret the result as a number in little endian\n",
-    "proof = little_endian_to_int(sha)\n",
     "# make a stream using BytesIO\n",
-    "stream = BytesIO(bin_block)\n",
     "# parse the Block\n",
-    "b = Block.parse(stream)\n",
     "# get the target\n",
-    "target = b.target()\n",
-    "# check proof of work < target\n",
-    "print(proof < target)"
+    "# check proof of work < target"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 7.2\n",
     "\n",
