--- a/session1.ipynb
+++ b/session1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,57 +40,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17\n",
-      "7\n",
-      "25\n",
-      "16\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 1.1\n",
     "\n",
     "# remember that % is the modulo operator\n",
     "prime = 31\n",
     "# 2+15=?\n",
-    "print((2+15) % prime)\n",
     "# 17+21=?\n",
-    "print((17+21) % prime)\n",
     "# 29-4=?\n",
-    "print((29-4) % prime)\n",
-    "# 15-30=?\n",
-    "print((15-30) % prime)"
+    "# 15-30=?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "OK\n",
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 1.2\n",
     "\n",
@@ -126,45 +94,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22\n",
-      "15\n",
-      "16\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 2.1\n",
     "\n",
     "# remember that ** is the exponentiation operator\n",
     "prime = 31\n",
     "# 24*19=?\n",
-    "print(24*19 % prime)\n",
     "# 17^3=?\n",
-    "print(17**3 % prime)\n",
-    "# 5^5*18=?\n",
-    "print(5**5*18 % prime)"
+    "# 5^5*18=?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 2.2\n",
     "\n",
@@ -173,54 +120,27 @@
     "prime = 31\n",
     "k = randint(1,prime)\n",
     "\n",
-    "# use range(prime) to iterate over all numbers from 0 to 30 inclusive\n",
-    "print(sorted([i*k % prime for i in range(prime)]))"
+    "# use range(prime) to iterate over all numbers from 0 to 30 inclusive"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 2.3\n",
     "\n",
     "prime = 31\n",
     "\n",
-    "# use range(1, prime) to iterate over all numbers from 1 to 30 inclusive\n",
-    "print([i**30 % prime for i in range(1, prime)])"
+    "# use range(1, prime) to iterate over all numbers from 1 to 30 inclusive"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "OK\n",
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 2.4\n",
     "\n",
@@ -254,45 +174,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "29\n",
-      "13\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 3.1\n",
     "\n",
     "# remember pow(x, p-2, p) is the same as 1/x in F_p\n",
     "prime = 31\n",
     "# 3/24 = ?\n",
-    "print(3*24**(prime-2) % prime)\n",
     "# 17^(-3) = ?\n",
-    "print(pow(17, prime-4, prime))\n",
-    "# 4^(-4)*11 = ?\n",
-    "print(pow(4, prime-5, prime) * 11 % prime)"
+    "# 4^(-4)*11 = ?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 3.2\n",
     "\n",
@@ -301,27 +200,14 @@
     "prime = 31\n",
     "k = randint(1, prime)\n",
     "\n",
-    "# use range(31) to iterate over all numbers from 0 to 30 inclusive\n",
-    "print(sorted([k*pow(i,prime-2,prime)%prime for i in range(31)]))"
+    "# use range(31) to iterate over all numbers from 0 to 30 inclusive"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 3.3\n",
     "\n",
@@ -350,19 +236,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(-2,4) is not on the curve\n",
-      "(3,7) is on the curve\n",
-      "(18,77) is on the curve\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 4.1\n",
     "\n",
@@ -372,30 +248,14 @@
     "points = ((-2,4), (3,7), (18,77))\n",
     "\n",
     "for x, y in points:\n",
-    "    # determine whether (x,y) is on the curve\n",
-    "    if y**2 == x**3 + 5*x + 7:\n",
-    "        print('({},{}) is on the curve'.format(x,y))\n",
-    "    else:\n",
-    "        print('({},{}) is not on the curve'.format(x,y))"
+    "    # determine whether (x,y) is on the curve"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 4.2\n",
     "\n",
@@ -417,21 +277,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 5.1\n",
     "\n",
@@ -455,17 +303,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.0 -7.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 6.1\n",
     "\n",
@@ -473,32 +313,15 @@
     "x2, y2 = (-1,-1)\n",
     "# formula in python:\n",
     "# s = (y2-y1)/(x2-x1)\n",
-    "s = (y2-y1)/(x2-x1)\n",
     "# x3 = s**2 - x2 - x1\n",
-    "x3 = s**2 - x2 - x1\n",
-    "# y3 = s*(x1-x3)-y1\n",
-    "y3 = s*(x1-x3) - y1\n",
-    "\n",
-    "print(x3, y3)"
+    "# y3 = s*(x1-x3)-y1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 6.2\n",
     "\n",
@@ -522,17 +345,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "18.0 77.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 7.1\n",
     "\n",
@@ -541,32 +356,15 @@
     "\n",
     "# formula in python\n",
     "# s = (3*x1**2+a)/(2*y1)\n",
-    "s = (3*x1**2+a)/(2*y1)\n",
     "# x3 = s**2 - 2*x1\n",
-    "x3 = s**2 - 2*x1\n",
-    "# y3 = s*(x1-x3) - y1\n",
-    "y3 = s*(x1-x3) - y1\n",
-    "\n",
-    "print(x3, y3)"
+    "# y3 = s*(x1-x3) - y1y3 = s*(x1-x3) - y1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 7.2\n",
     "\n",
