--- a/session1/session1.ipynb
+++ b/session1/session1.ipynb
@@ -101,6 +101,7 @@
     "# Exercise 2.1\n",
     "\n",
     "# remember that ** is the exponentiation operator\n",
+    "prime = 31\n",
     "# 24*19=?\n",
     "# 17^3=?\n",
     "# 5^5*18=?"
@@ -116,9 +117,8 @@
     "\n",
     "from random import randint\n",
     "\n",
-    "# use range(31) to iterate over all numbers from 0 to 30 inclusive\n",
     "prime = 31\n",
-    "k = randint(1,31)"
+    "# use range(31) to iterate over all numbers from 0 to 30 inclusive"
    ]
   },
   {
@@ -129,8 +129,8 @@
    "source": [
     "# Exercise 2.3\n",
     "\n",
-    "# use range(1, 31) to iterate over all numbers from 1 to 30 inclusive\n",
-    "prime = 31"
+    "prime = 31\n",
+    "# use range(1, 31) to iterate over all numbers from 1 to 30 inclusive"
    ]
   },
   {
@@ -194,9 +194,8 @@
     "\n",
     "from random import randint\n",
     "\n",
-    "# use range(31) to iterate over all numbers from 0 to 30 inclusive\n",
     "prime = 31\n",
-    "k = randint(1, 31)"
+    "# use range(31) to iterate over all numbers from 0 to 30 inclusive"
    ]
   },
   {
@@ -243,8 +242,10 @@
     "# (-2,4), (3,7), (18,77)\n",
     "# equation in python is: y**2 == x**3 + 5*x + 7\n",
     "\n",
-    "for x, y in ((-2,4), (3,7), (18,77)):\n",
-    "    pass"
+    "points = ((-2,4), (3,7), (18,77))\n",
+    "\n",
+    "for x, y in points:\n",
+    "    # determine whether (x,y) is on the curve"
    ]
   },
   {
