--- a/session2/session2.ipynb
+++ b/session2/session2.ipynb
@@ -47,11 +47,12 @@
     "points = ((192,105), (17,56), (200,119), (1,193), (42,99))\n",
     "\n",
     "# iterate over points\n",
+    "for x_raw, y_raw in points:\n",
     "    # Initialize points this way:\n",
     "    # x = FieldElement(192, prime)\n",
     "    # y = FieldElement(105, prime)\n",
     "    # try initializing, RuntimeError means not on curve\n",
-    "    # p = Point(x, y, a, b)\n"
+    "    # p = Point(x, y, a, b)"
    ]
   },
   {
@@ -100,6 +101,7 @@
     "additions = ((192, 105, 17, 56), (47, 71, 117, 141), (143, 98, 76, 66))\n",
     "\n",
     "# iterate over the additions to be done\n",
+    "for x1_raw, y1_raw, x2_raw, y2_raw in additions:\n",
     "    # Initialize points this way:\n",
     "    # x = FieldElement(192, prime)\n",
     "    # y = FieldElement(105, prime)\n",
@@ -149,6 +151,7 @@
     "multiplications = ((2, 192, 105), (2, 143, 98), (2, 47, 71), (4, 47, 71), (8, 47, 71), (21, 47, 71))\n",
     "\n",
     "# iterate over the multiplications\n",
+    "for s, x_raw, y_raw in multiplications:\n",
     "    # Initialize points this way:\n",
     "    # x = FieldElement(192, prime)\n",
     "    # y = FieldElement(105, prime)\n",
@@ -156,7 +159,7 @@
     "    # start product at 0 (point at infinity)\n",
     "    # loop over n times (n is 2, 4, 8 or 21 in the above examples)\n",
     "        # add the point to the product\n",
-    "    # print product"
+    "    # print product    \n"
    ]
   },
   {
@@ -288,6 +291,7 @@
     "secrets = (7, 1485, 2**128, 2**240+2**31)\n",
     "\n",
     "# iterate over secrets\n",
+    "for secret in secrets:\n",
     "    # get the public point"
    ]
   },
@@ -334,6 +338,7 @@
     "secrets = (999**3, 123, 42424242)\n",
     "\n",
     "# iterate through secrets\n",
+    "for secret in secrets:\n",
     "    # get public point\n",
     "    # uncompressed - b'\\x04' followed by x coord, then y coord\n",
     "    # here's how you express a coordinate in bytes: some_integer.to_bytes(32, 'big')\n",
@@ -390,6 +395,7 @@
     ")\n",
     "\n",
     "# iterate through components\n",
+    "for compressed, secret in components:\n",
     "    # get the public point\n",
     "    # get the sec format\n",
     "    # hash160 the result\n",
@@ -528,8 +534,10 @@
     "\n",
     "# initialize the public point\n",
     "# use: S256Point(x-coordinate, y-coordinate)\n",
+    "point = S256Point(px, py)\n",
     "\n",
     "# iterate over signatures\n",
+    "for z, r, s in signatures:\n",
     "    # u = z / s, v = r / s\n",
     "    # finally, uG+vP should have the x-coordinate equal to r"
    ]
