--- a/session3/session3.ipynb
+++ b/session3/session3.ipynb
@@ -149,9 +149,13 @@
     "         '813f79011acb80925dfe69b3def355fe914bd1d96a3f5f71bf8303c6a989c7d1')\n",
     "\n",
     "# iterate over hexes\n",
+    "for h in hexes:\n",
     "    # turn into binary with unhexlify\n",
+    "    b = unhexlify(h)\n",
     "    # reverse using [::-1]\n",
-    "    # turn back to hex with hexlify"
+    "    b_rev = b[::-1]\n",
+    "    # turn back to hex with hexlify\n",
+    "    print(hexlify(b_rev))"
    ]
   },
   {
