--- a/session5/session5.ipynb
+++ b/session5/session5.ipynb
@@ -80,7 +80,7 @@
     "\n",
     "# Step 3\n",
     "hash_type = SIGHASH_ALL\n",
-    "z = tx_obj.hash_to_sign(0, hash_type)\n",
+    "z = tx_obj.sig_hash(0, hash_type)\n",
     "pk = PrivateKey(secret=8675309)\n",
     "der = pk.sign(z).der()\n",
     "sig = der + bytes([hash_type])\n",
@@ -161,7 +161,7 @@
     "# convert change amount to satoshis (multiply by 100 million)\n",
     "# create a new tx output for target\n",
     "# sign with SIGHASH_ALL\n",
-    "# get the hash to sign\n",
+    "# get the sighash\n",
     "# sign with priv to get der\n",
     "# add the sighash as a single byte bytes([sighash])\n",
     "# get the sec from priv\n",
