session0: Fix typo and elaborate slightly

--- a/session0/session0.ipynb
+++ b/session0/session0.ipynb
@@ -170,7 +170,7 @@
     "Indexing bytes will get you the numerical value:\n",
     "\n",
     "```python\n",
-    "print(b'&'[0]) # 38 since & charcter #38\n",
+    "print(b'&'[0]) # 38 since '&' is ASCII character #38: http://www.asciitable.com/\n",
     "```\n",
     "\n",
     "You can do the reverse by using bytes:\n",
