--- a/session5/complete/session5.ipynb
+++ b/session5/complete/session5.ipynb
@@ -177,7 +177,7 @@
     "# create a new tx input\n",
     "tx_ins.append(TxIn(\n",
     "            prev_tx=prev_tx,\n",
-    "            prev_index=0,\n",
+    "            prev_index=prev_index,\n",
     "            script_sig=b'',\n",
     "            sequence=0xffffffff,\n",
     "        ))\n",
